Fix dark mode class that accidentially applied margin on dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -153,7 +153,6 @@ div {
 .dark-heading {
   color: white;
   transition: 0.2s color;
-  margin-right: 50px;
 }
 
 .dark-eyebrow {
